xtend_gen/src/main/java/no/esito/genova/io/antlr/TmplParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g 2012-02-05 10:53:22

package no.esito.genova.io.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class TmplParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "OUT", "REM", "COMMENT", "SECTION", "BEGIN", "CREATESECTION", "IF_", "WS", "NEWLINE", "ENDIF", "EVENT", "BOOL_START", "BOOL_END", "ALFA", "DOLLAR", "LETTER", "UNDER", "ID", "DIGIT", "INT", "DOT", "MINUS", "LITERAL", "COLON", "SEMICOLON", "HASH", "COMMA", "SQUOTE", "SLASH", "LPARAN", "RPARAN", "LBRACK", "RBRACK", "LSQUARE", "RSQUARE", "APPEND", "LT", "GT", "LE", "GE", "EQUAL", "ASSIGN", "NE", "AND", "OR", "PLUS", "MULTIPLY", "NOT", "TILDE", "HAT", "QUESTION", "EXPR", "PATH", "OPTIONAL", "BLOCK", "PROG", "SECTIONS", "HEADER"
    };
    public static final int DOLLAR=18;
    public static final int APPEND=39;
    public static final int LT=40;
    public static final int LBRACK=35;
    public static final int LSQUARE=37;
    public static final int LETTER=19;
    public static final int NOT=51;
    public static final int ALFA=17;
    public static final int ID=21;
    public static final int AND=47;
    public static final int EOF=-1;
    public static final int HAT=53;
    public static final int PROG=59;
    public static final int UNDER=20;
    public static final int EXPR=55;
    public static final int SLASH=32;
    public static final int MULTIPLY=50;
    public static final int PATH=56;
    public static final int COMMA=30;
    public static final int EQUAL=44;
    public static final int BEGIN=8;
    public static final int TILDE=52;
    public static final int RPARAN=34;
    public static final int ENDIF=13;
    public static final int PLUS=49;
    public static final int DIGIT=22;
    public static final int HEADER=61;
    public static final int COMMENT=6;
    public static final int DOT=24;
    public static final int NE=46;
    public static final int RBRACK=36;
    public static final int GE=43;
    public static final int SECTION=7;
    public static final int BOOL_END=16;
    public static final int CREATESECTION=9;
    public static final int HASH=29;
    public static final int LITERAL=26;
    public static final int INT=23;
    public static final int SEMICOLON=28;
    public static final int REM=5;
    public static final int MINUS=25;
    public static final int SQUOTE=31;
    public static final int RSQUARE=38;
    public static final int EVENT=14;
    public static final int OPTIONAL=57;
    public static final int COLON=27;
    public static final int LPARAN=33;
    public static final int WS=11;
    public static final int NEWLINE=12;
    public static final int QUESTION=54;
    public static final int OUT=4;
    public static final int IF_=10;
    public static final int BLOCK=58;
    public static final int OR=48;
    public static final int SECTIONS=60;
    public static final int ASSIGN=45;
    public static final int GT=41;
    public static final int BOOL_START=15;
    public static final int LE=42;

    // delegates
    // delegators


        public TmplParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TmplParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[69+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TmplParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g"; }





    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:33:1: prog : block sections -> ^( PROG block sections ) ;
    public final TmplParser.prog_return prog() throws RecognitionException {
        TmplParser.prog_return retval = new TmplParser.prog_return();
        retval.start = input.LT(1);
        int prog_StartIndex = input.index();
        CommonTree root_0 = null;

        TmplParser.block_return block1 = null;

        TmplParser.sections_return sections2 = null;


        RewriteRuleSubtreeStream stream_sections=new RewriteRuleSubtreeStream(adaptor,"rule sections");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:34:3: ( block sections -> ^( PROG block sections ) )
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:35:3: block sections
            {
            pushFollow(FOLLOW_block_in_prog150);
            block1=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block1.getTree());
            pushFollow(FOLLOW_sections_in_prog152);
            sections2=sections();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_sections.add(sections2.getTree());


            // AST REWRITE
            // elements: sections, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 36:5: -> ^( PROG block sections )
            {
                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:37:7: ^( PROG block sections )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);

                adaptor.addChild(root_1, stream_block.nextTree());
                adaptor.addChild(root_1, stream_sections.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class sections_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sections"
    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:40:1: sections : ( section )* -> ^( SECTIONS ( section )* ) ;
    public final TmplParser.sections_return sections() throws RecognitionException {
        TmplParser.sections_return retval = new TmplParser.sections_return();
        retval.start = input.LT(1);
        int sections_StartIndex = input.index();
        CommonTree root_0 = null;

        TmplParser.section_return section3 = null;


        RewriteRuleSubtreeStream stream_section=new RewriteRuleSubtreeStream(adaptor,"rule section");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:41:3: ( ( section )* -> ^( SECTIONS ( section )* ) )
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:42:3: ( section )*
            {
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:42:3: ( section )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==SECTION) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:0:0: section
            	    {
            	    pushFollow(FOLLOW_section_in_sections187);
            	    section3=section();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_section.add(section3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: section
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 43:5: -> ^( SECTIONS ( section )* )
            {
                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:44:7: ^( SECTIONS ( section )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SECTIONS, "SECTIONS"), root_1);

                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:44:18: ( section )*
                while ( stream_section.hasNext() ) {
                    adaptor.addChild(root_1, stream_section.nextTree());

                }
                stream_section.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, sections_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "sections"

    public static class section_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "section"
    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:47:1: section : SECTION ( WS )+ filepath filepath2 ( WS )* NEWLINE block -> ^( SECTION filepath filepath2 block ) ;
    public final TmplParser.section_return section() throws RecognitionException {
        TmplParser.section_return retval = new TmplParser.section_return();
        retval.start = input.LT(1);
        int section_StartIndex = input.index();
        CommonTree root_0 = null;

        Token SECTION4=null;
        Token WS5=null;
        Token WS8=null;
        Token NEWLINE9=null;
        TmplParser.filepath_return filepath6 = null;

        TmplParser.filepath2_return filepath27 = null;

        TmplParser.block_return block10 = null;


        CommonTree SECTION4_tree=null;
        CommonTree WS5_tree=null;
        CommonTree WS8_tree=null;
        CommonTree NEWLINE9_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_SECTION=new RewriteRuleTokenStream(adaptor,"token SECTION");
        RewriteRuleSubtreeStream stream_filepath=new RewriteRuleSubtreeStream(adaptor,"rule filepath");
        RewriteRuleSubtreeStream stream_filepath2=new RewriteRuleSubtreeStream(adaptor,"rule filepath2");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:48:3: ( SECTION ( WS )+ filepath filepath2 ( WS )* NEWLINE block -> ^( SECTION filepath filepath2 block ) )
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:49:3: SECTION ( WS )+ filepath filepath2 ( WS )* NEWLINE block
            {
            SECTION4=(Token)match(input,SECTION,FOLLOW_SECTION_in_section222); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SECTION.add(SECTION4);

            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:49:11: ( WS )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==WS) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:0:0: WS
            	    {
            	    WS5=(Token)match(input,WS,FOLLOW_WS_in_section224); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_WS.add(WS5);


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            pushFollow(FOLLOW_filepath_in_section227);
            filepath6=filepath();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_filepath.add(filepath6.getTree());
            pushFollow(FOLLOW_filepath2_in_section229);
            filepath27=filepath2();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_filepath2.add(filepath27.getTree());
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:49:34: ( WS )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:0:0: WS
            	    {
            	    WS8=(Token)match(input,WS,FOLLOW_WS_in_section231); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_WS.add(WS8);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            NEWLINE9=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_section234); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NEWLINE.add(NEWLINE9);

            pushFollow(FOLLOW_block_in_section236);
            block10=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block10.getTree());


            // AST REWRITE
            // elements: filepath, filepath2, block, SECTION
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 50:5: -> ^( SECTION filepath filepath2 block )
            {
                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:51:7: ^( SECTION filepath filepath2 block )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_SECTION.nextNode(), root_1);

                adaptor.addChild(root_1, stream_filepath.nextTree());
                adaptor.addChild(root_1, stream_filepath2.nextTree());
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, section_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "section"

    public static class filepath2_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "filepath2"
    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:54:1: filepath2 : ( ( WS )+ filepath )? -> ^( OPTIONAL ( filepath )? ) ;
    public final TmplParser.filepath2_return filepath2() throws RecognitionException {
        TmplParser.filepath2_return retval = new TmplParser.filepath2_return();
        retval.start = input.LT(1);
        int filepath2_StartIndex = input.index();
        CommonTree root_0 = null;

        Token WS11=null;
        TmplParser.filepath_return filepath12 = null;


        CommonTree WS11_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_filepath=new RewriteRuleSubtreeStream(adaptor,"rule filepath");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:55:3: ( ( ( WS )+ filepath )? -> ^( OPTIONAL ( filepath )? ) )
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:56:3: ( ( WS )+ filepath )?
            {
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:56:3: ( ( WS )+ filepath )?
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:56:4: ( WS )+ filepath
                    {
                    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:56:4: ( WS )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==WS) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:0:0: WS
                    	    {
                    	    WS11=(Token)match(input,WS,FOLLOW_WS_in_filepath2274); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_WS.add(WS11);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    pushFollow(FOLLOW_filepath_in_filepath2277);
                    filepath12=filepath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_filepath.add(filepath12.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: filepath
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 57:5: -> ^( OPTIONAL ( filepath )? )
            {
                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:58:7: ^( OPTIONAL ( filepath )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(OPTIONAL, "OPTIONAL"), root_1);

                // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:58:18: ( filepath )?
                if ( stream_filepath.hasNext() ) {
                    adaptor.addChild(root_1, stream_filepath.nextTree());

                }
                stream_filepath.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, filepath2_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "filepath2"

    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stat"
    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:61:1: stat : ( OUT | BEGIN ( WS )* NEWLINE | CREATESECTION ( WS )+ filepath filepath2 ( WS )* NEWLINE -> ^( CREATESECTION filepath filepath2 ) | REM | COMMENT | IF_ ( WS )+ BOOL_START expr BOOL_END NEWLINE block ENDIF -> ^( IF_ expr block ) | EVENT ( WS )+ expr ( WS )* NEWLINE -> ^( EVENT expr ) | DOLLAR expr DOLLAR -> ^( DOLLAR expr ) | ALFA ID ALFA -> ^( ALFA ID ) | BOOL_START expr BOOL_END -> ^( BOOL_START expr ) );
    public final TmplParser.stat_return stat() throws RecognitionException {
        TmplParser.stat_return retval = new TmplParser.stat_return();
        retval.start = input.LT(1);
        int stat_StartIndex = input.index();
        CommonTree root_0 = null;

        Token OUT13=null;
        Token BEGIN14=null;
        Token WS15=null;
        Token NEWLINE16=null;
        Token CREATESECTION17=null;
        Token WS18=null;
        Token WS21=null;
        Token NEWLINE22=null;
        Token REM23=null;
        Token COMMENT24=null;
        Token IF_25=null;
        Token WS26=null;
        Token BOOL_START27=null;
        Token BOOL_END29=null;
        Token NEWLINE30=null;
        Token ENDIF32=null;
        Token EVENT33=null;
        Token WS34=null;
        Token WS36=null;
        Token NEWLINE37=null;
        Token DOLLAR38=null;
        Token DOLLAR40=null;
        Token ALFA41=null;
        Token ID42=null;
        Token ALFA43=null;
        Token BOOL_START44=null;
        Token BOOL_END46=null;
        TmplParser.filepath_return filepath19 = null;

        TmplParser.filepath2_return filepath220 = null;

        TmplParser.expr_return expr28 = null;

        TmplParser.block_return block31 = null;

        TmplParser.expr_return expr35 = null;

        TmplParser.expr_return expr39 = null;

        TmplParser.expr_return expr45 = null;


        CommonTree OUT13_tree=null;
        CommonTree BEGIN14_tree=null;
        CommonTree WS15_tree=null;
        CommonTree NEWLINE16_tree=null;
        CommonTree CREATESECTION17_tree=null;
        CommonTree WS18_tree=null;
        CommonTree WS21_tree=null;
        CommonTree NEWLINE22_tree=null;
        CommonTree REM23_tree=null;
        CommonTree COMMENT24_tree=null;
        CommonTree IF_25_tree=null;
        CommonTree WS26_tree=null;
        CommonTree BOOL_START27_tree=null;
        CommonTree BOOL_END29_tree=null;
        CommonTree NEWLINE30_tree=null;
        CommonTree ENDIF32_tree=null;
        CommonTree EVENT33_tree=null;
        CommonTree WS34_tree=null;
        CommonTree WS36_tree=null;
        CommonTree NEWLINE37_tree=null;
        CommonTree DOLLAR38_tree=null;
        CommonTree DOLLAR40_tree=null;
        CommonTree ALFA41_tree=null;
        CommonTree ID42_tree=null;
        CommonTree ALFA43_tree=null;
        CommonTree BOOL_START44_tree=null;
        CommonTree BOOL_END46_tree=null;
        RewriteRuleTokenStream stream_DOLLAR=new RewriteRuleTokenStream(adaptor,"token DOLLAR");
        RewriteRuleTokenStream stream_ENDIF=new RewriteRuleTokenStream(adaptor,"token ENDIF");
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_BOOL_START=new RewriteRuleTokenStream(adaptor,"token BOOL_START");
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_ALFA=new RewriteRuleTokenStream(adaptor,"token ALFA");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EVENT=new RewriteRuleTokenStream(adaptor,"token EVENT");
        RewriteRuleTokenStream stream_BOOL_END=new RewriteRuleTokenStream(adaptor,"token BOOL_END");
        RewriteRuleTokenStream stream_IF_=new RewriteRuleTokenStream(adaptor,"token IF_");
        RewriteRuleTokenStream stream_CREATESECTION=new RewriteRuleTokenStream(adaptor,"token CREATESECTION");
        RewriteRuleSubtreeStream stream_filepath=new RewriteRuleSubtreeStream(adaptor,"rule filepath");
        RewriteRuleSubtreeStream stream_filepath2=new RewriteRuleSubtreeStream(adaptor,"rule filepath2");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:62:3: ( OUT | BEGIN ( WS )* NEWLINE | CREATESECTION ( WS )+ filepath filepath2 ( WS )* NEWLINE -> ^( CREATESECTION filepath filepath2 ) | REM | COMMENT | IF_ ( WS )+ BOOL_START expr BOOL_END NEWLINE block ENDIF -> ^( IF_ expr block ) | EVENT ( WS )+ expr ( WS )* NEWLINE -> ^( EVENT expr ) | DOLLAR expr DOLLAR -> ^( DOLLAR expr ) | ALFA ID ALFA -> ^( ALFA ID ) | BOOL_START expr BOOL_END -> ^( BOOL_START expr ) )
            int alt12=10;
            switch ( input.LA(1) ) {
            case OUT:
                {
                alt12=1;
                }
                break;
            case BEGIN:
                {
                alt12=2;
                }
                break;
            case CREATESECTION:
                {
                alt12=3;
                }
                break;
            case REM:
                {
                alt12=4;
                }
                break;
            case COMMENT:
                {
                alt12=5;
                }
                break;
            case IF_:
                {
                alt12=6;
                }
                break;
            case EVENT:
                {
                alt12=7;
                }
                break;
            case DOLLAR:
                {
                alt12=8;
                }
                break;
            case ALFA:
                {
                alt12=9;
                }
                break;
            case BOOL_START:
                {
                alt12=10;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;
            }

            switch (alt12) {
                case 1 :
                    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:63:3: OUT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    OUT13=(Token)match(input,OUT,FOLLOW_OUT_in_stat313); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    OUT13_tree = (CommonTree)adaptor.create(OUT13);
                    adaptor.addChild(root_0, OUT13_tree);
                    }

                    }
                    break;
                case 2 :
                    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:64:5: BEGIN ( WS )* NEWLINE
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    BEGIN14=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_stat319); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BEGIN14_tree = (CommonTree)adaptor.create(BEGIN14);
                    adaptor.addChild(root_0, BEGIN14_tree);
                    }
                    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:64:11: ( WS )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==WS) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // C:\\git\\PersHomeProjects\\xtend_gen\\src\\main\\grammar\\TmplParser.g:0:0: WS
                    	    {
                    	    WS15=(Token)match(input,WS,FOLLOW_WS_in_stat321); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    WS15_tree = (CommonTree)adaptor.create(WS15);
                    	    adaptor.addChild(root_0, WS15_tree);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);

                    NEWLINE16=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_stat324); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
